Update exim dependency
Use latest version of har-reader.
Bump Jackson to use a newer version for har-reader.

Close zaproxy/zaproxy#8991.

Signed-off-by: thc202 <thc202@gmail.com>